feat(web): #420 add patient diseases
- Redesign PatientInfo to use Papers for each info
- Scale html viewport to display properly on mobile
- Edit gutter to match the spacing values
- Show diseases in PatientInfo
- Edit DB diseases to be array instead of object with booleans
- Add edit button on PatientInfo

--- a/packages/web/src/styles.scss
+++ b/packages/web/src/styles.scss
@@ -2,4 +2,6 @@ $dark: #101820;
 $light: #e0e8f0;
 $primary: #6682d7;
 
+$grid-gutter-width: 1rem;
+
 @import "/node_modules/bootstrap/scss/bootstrap";
